--- a/index.html
+++ b/index.html
@@ -12,6 +12,30 @@
 		<h1>yo! what's up guys?</h1>
 		<p>check out our website so far!</p>
 		<p>it's pretty rad</p>
+		
+		<p>Log in to your Technozap account</p>
+		<form>
+		Username:<br>
+		<input type="text" name="username"><br>
+		Password:<br>
+		<input type="text" name="password"><br>
+		<input type="submit" value="Login">
+		</form>
+		
+		<p>Don't have an account? Register here!</p>
+		<form>
+		First Name:<br>
+		<input type="text" name="firstname"><br>
+		Last Name:<br>
+		<input type="text" name="lastname"><br>
+		Username:<br>
+		<input type="text" name="usernme"><br>
+		Password:<br>
+		<input type="text" name="pssword"><br>
+		Confirm Password:<br>
+		<input type="text" name="confirm"><br>
+		<input type="submit" value="Register">
+		</form>
 	</body>
 
 </html>
