--- a/League_of_Legends.html
+++ b/League_of_Legends.html
@@ -1,1 +1,1 @@
-<div class='msgln'>(11:47 AM) <b>gamer123</b>: I LOV LEAGUE OF LEGENDS!<br></div>
+<div class='msgln'>(11:47 AM) <b>gamer1</b>: I LOV LEAGUE OF LEGENDS!<br></div><div class='msgln'>(1:47 PM) <b>gamer3</b>: PLEASE DELETE TEEMO RITO<br></div>
