--- a/Overwatch.html
+++ b/Overwatch.html
@@ -1,1 +1,1 @@
-<div class='msgln'>(11:48 AM) <b>gamer123</b>: THE BETA IS OUT!!<br></div>
+<div class='msgln'>(11:48 AM) <b>gamer1</b>: THE BETA IS OUT!!<br></div><div class='msgln'>(1:45 PM) <b>gamer2</b>: HI THERE HI THERE HI THERE - Winston<br></div>
