--- a/Street_Fighter_V.html
+++ b/Street_Fighter_V.html
@@ -1,1 +1,1 @@
-<div class='msgln'>(11:54 AM) <b>gamer123</b>: Karin player here. Any tips against Cammy?<br></div>
+<div class='msgln'>(11:54 AM) <b>gamer1</b>: Karin player here. Any tips against Cammy?<br></div><div class='msgln'>(1:41 PM) <b>gamer2</b>: bait out a spike and do a full punish<br></div><div class='msgln'>(1:42 PM) <b>gamer2</b>: and spam low jabs to block against incomings<br></div>
